[project]
name = "medline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "playwright>=1.52.0",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
authors=["50-Course <eridotdev@proton.me>"]
includes=[ {include= "src"} ]

