[project]
name = "medline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "alembic>=1.15.2",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "setuptools>=80.7.1",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
]
authors=["50-Course <eridotdev@proton.me>"]
includes=[ {include= "src"} ]

